fix the text align for the welcome section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -656,6 +656,10 @@ header a {
                     justify-content: center;
                 }
 
+                #wlcm-gs {
+                    text-align: center;
+                }
+
                 #welcome {
                     display: contents;
                 }
